# aws-s3-diff

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  README.md  TODO.md  makefile  pyproject.toml  pyrightconfig.json  run.py
aws_s3_diff/: account.py  accounts.py  aws_s3_diff.py  config_file.py  config_files.py  exception.py  exceptions.py  local_result.py  local_results.py  main.py  s3_uri.py  type_custom.py
aws_s3_diff/s3_data/: all_accounts.py  analysis.py  df_util.py  interface.py  one_account.py  s3_client.py
config/: analysis-config.json  analysis_config.json  s3-uris-to-analyze.csv
s3-results/: README.md
src/: analysis.py  analysis_config.py  combine.py  compare.py  config.py  config_files.py  constants.py  exceptions.py  extract.py  local_paths.py  local_results.py  logger.py  main.py  s3-uris-to-analyze.csv  s3-uris-to-analyze.txt  s3.py  s3_client.py  s3_data.py  s3_extract.py  s3_uris_to_analyze.py  types_custom.py  utils.py
src/s3_data/: all_accounts.py  analysis.py  interface.py  one_account.py  s3_csv.py
tests/: __init__.py  aws.py  config.py  dfs.py  expected_result_compare.csv  run_local_s3_server.py  run_moto_server.py  s3-uris-to-analyze.txt  test_analysis.py  test_aws_s3_diff.py  test_combine.py  test_compare.py  test_config.py  test_config_files.py  test_extract.py  test_local_paths.py  test_local_result.py  test_local_results.py  test_main.py  test_one_account_s3_data.py  test_s3.py  test_s3_client.py  test_s3_data.py  test_s3_data_analysis.py  test_s3_data_one_account.py  test_s3_data_s3_client.py  test_s3_extract.py  test_s3_uri.py  test_s3_uris_to_analyze.py  test_types_custom.py  test_with_local_s3_server.py  utils.py
tests/expected-results/: analysis.csv  aws_account_1_pro.csv  aws_account_2_release.csv  aws_account_3_dev.csv  release.csv
tests/fake-files/: s3-uris-to-analyze.csv
(+68 files in other folders)
