[tool.poetry]
name = "aws-s3-compare-paths"
version = "0.1.0"
description = "Compare S3 files between different AWS accounts"
authors = ["CarlosAMolina <15368012+CarlosAMolina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "R", # Refactor (R)
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # Warning (W)
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
