[tool.poetry]
package-mode = false
name = "aws-s3-diff"
version = "1.0.0"
description = "Compare S3 files between different AWS accounts"
authors = ["CarlosAMolina <15368012+CarlosAMolina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "1.35.47"
pandas = "2.2.3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "3.8.0"
moto = {version = "5.0.18", extras = ["s3","server"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "R", # Refactor (R)
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # Warning (W)
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
